--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Gift Surprise</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Gift Box Icon -->
   <div id="gift-box" class="gift-box">🎁</div>
-
-  <!-- Letters Container -->
   <div id="letters-container" class="letters-container"></div>
-
-  <!-- Pagination Controls -->
   <div class="pagination">
     <button id="prev-button" disabled>Previous</button>
     <button id="next-button">Next</button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
