--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Gift Surprise</title>
+  <title>Gift Surprise</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Gift Box -->
   <div id="gift-box" class="gift-box">🎁</div>
+
+  <!-- Letters Container -->
   <div id="letters-container" class="letters-container"></div>
-  <div class="pagination">
-    <button id="prev-button" disabled>Previous</button>
-    <button id="next-button">Next</button>
-  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
