--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gift Surprise</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Message Cards</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Gift Box -->
-  <div id="gift-box" class="gift-box">🎁</div>
 
-  <!-- Letters Container -->
-  <div id="letters-container" class="letters-container"></div>
+  <div class="container">
+    <h1>Special Messages</h1>
+    <div class="card-container">
+      <!-- Cards will be dynamically inserted via JavaScript -->
+    </div>
+    <!-- Pagination Controls -->
+    <div class="pagination">
+      <button id="prev-button" disabled>Previous</button>
+      <button id="next-button">Next</button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
